--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ title: Home
 <center>
 <img src="/assets/images/john.jpg" style="border-radius: 50%" height="90px" width="240px" alt="A picture of author.">
 <br><br>
-<h1 style="color:white">Hi, I am <span>John Doe.</span></h1>
+<h1 style="color:white">Hi, I am <span>JunSik KIM.</span></h1>
 <br>
-<h3> Web designer and Developer</h3>
+<h3> Developer</h3>
 <br>
 <a href="/about/" class="btn" style="color:white">View More about me</a>
 </center>
